-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.0, Lustre 2.10.6
-
None
-
3
-
9223372036854775807
In reviewing the overstriping patch, Andreas noted that one assert it's removing should also be removed in the maintenance branches:
https://review.whamcloud.com/#/c/28425/15/lustre/lov/lov_object.c
This is because the client is asserting on network data from the server, and the assert is enforcing an expected constraint (num stripes <= num osts), but nothing goes wrong if it's removed. In fact, it might be possible for the two to disagree if OSTs go offline.